--- a/techs/django-api/requirements.txt
+++ b/techs/django-api/requirements.txt
@@ -1,6 +1,48 @@
+Appium-Python-Client==5.0.0
 asgiref==3.8.1
+attrs==25.3.0
+bcrypt==3.2.0
+certifi==2025.1.31
+cffi==1.17.1
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.6
+cryptography==44.0.2
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+drf-spectacular==0.28.0
+drf-yasg==1.21.10
+h11==0.16.0
+idna==2.5
+importlib-metadata==4.6.4
+inflection==0.5.1
+Jinja2==3.0.3
+jsonschema==3.2.0
+MarkupSafe==2.0.1
+outcome==1.3.0.post0
+packaging==24.2
+psycopg2-binary==2.9.10
+pycparser==2.22
+PyJWT==2.3.0
+pyOpenSSL==21.0.0
+pyrsistent==0.20.0
+PySocks==1.7.1
+pytz==2022.1
+PyYAML==6.0.1
+requests==2.25.1
+selenium==4.30.0
+setuptools==79.0.1
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.3
-typing_extensions==4.13.2
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.13.0
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==1.26.5
+websocket-client==1.8.0
+wsproto==1.2.0
+zipp==3.21.0
